# Calculator

./: CMakeLists.txt  Calculator_ja_JP.ts  c_app_properties.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml
